--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,11 +1,11 @@
 <%= render 'layouts/error_messages', object: f.object %>
 
 <div class="form-group">
-  <%= f.label :name %>
+  <%= f.label :name, "Nome" %>
   <%= f.text_field :name, class: 'form-control' %>
 </div>
 
 <div class="form-group">
-  <%= f.label :phone %>
+  <%= f.label :phone, "Telefone" %>
   <%= f.text_field :phone, class: 'form-control' %>
 </div>
