--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,10 +8,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Contact List', root_url, class: 'navbar-brand' %>
+      <%= link_to 'Contatinhos', root_url, class: 'navbar-brand' %>
     </div>
 
-    <!-- Conteudo exibido em telas maiores e que serao escondidos em telas menores -->
     <div class="collapse navbar-collapse" id="expanded-menu">
       <ul class="nav navbar-nav">
         <% if !user_signed_in? %>
@@ -30,11 +29,11 @@
         <% else %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-              bem vindo, <%= current_user.name %> <span class="caret"></span>
+              Bem vindo, <%= current_user.name %> <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
               <li>
-                <%= link_to 'Minha Pagina', contacts_path %>
+                <%= link_to 'Meus Contatinhos', contacts_path %>
               </li>
               <li>
                 <%= link_to 'Editar', edit_user_path(current_user) %>
