--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,9 +1,9 @@
 <div class="jumbotron">
-  <h1>Contact List</h1>
+  <h1>Contatinhos</h1>
   <p>
-    Gerencie seus contato em qualquer lugar!
+    Gerencie seus contatinhos em qualquer lugar!
   </p>
   <p>
-    <%= link_to 'Crie Sua Conta', new_user_path, class: 'btn btn-primary btn-lg' %>
+    <%= link_to 'Crie sua conta', new_user_path, class: 'btn btn-primary btn-lg' %>
   </p>
 </div>
