--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,21 +1,21 @@
 <%= render 'layouts/error_messages', object: f.object %>
 
 <div class="form-group">
-  <%= f.label :name %>
+  <%= f.label :name, "Nome"%>
   <%= f.text_field :name, class: 'form-control' %>
 </div>
 
 <div class="form-group">
-  <%= f.label :email %>
+  <%= f.label :email, "Email" %>
   <%= f.email_field :email, class: 'form-control' %>
 </div>
 
 <div class="form-group">
-  <%= f.label :password %>
+  <%= f.label :password, "Senha"%>
   <%= f.password_field :password, class: 'form-control' %>
 </div>
 
 <div class="form-group">
-  <%= f.label :password_confirmation %>
+  <%= f.label :password_confirmation, "Confirmação de senha" %>
   <%= f.password_field :password_confirmation, class: 'form-control' %>
 </div>
